[tool.poetry]
name = "ee scripts"
version = "0.1.0"
description = ""
authors = ["Kevin Wang <59260907+Togohogo1@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Send2Trash = "^1.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
